增加背景图片滤镜，多数页面使用背景图片，完善团队介绍，修改内容图片。

--- a/AppliedDesign.html
+++ b/AppliedDesign.html
@@ -31,11 +31,8 @@
 <div id="dlutb">
     <div id="moduleHeader">
         <div id="nav"></div>
-        <br>
-        <div class="moduleTitle">Awards</div>
-        <div class="subModule">
-            <span>Applied Design</span>
-        </div>
+        <div id="background" class="awards"></div>
+        <div class="moduleTitle">Applied Design</div>
     </div>
 
     <div id="article">
@@ -59,10 +56,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
 
             </div>
