--- a/Description.html
+++ b/Description.html
@@ -9,15 +9,17 @@
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/contents.css">
+    <!--<link rel="stylesheet" href="css/contents.css">-->
+    <link rel="stylesheet" href="css/parts.css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -27,17 +29,14 @@
 </head>
 <body>
 <div id="dlutb">
-    <div id="moduleHeader" class="description">
+    <div id="moduleHeader">
         <div id="nav"></div>
-        <br>
-        <div class="moduleTitle">Project</div>
-        <div class="subModule">
-            <span>Description</span>
-        </div>
+        <div id="background" class="description"></div>
+        <div class="moduleTitle">Description</div>
     </div>
 
     <div id="mainBody">
-        <div id="contents"></div>
+        <!--<div id="contents"></div>-->
         <div id="article">
             <div>
                 <h2 class="title">We are concerned about the world's largest potential group of chronic kidney
@@ -134,17 +133,14 @@
                         prevent
                         irreversible
                         damage to the kidneys.</p>
+
                     <table class="img">
                         <tr>
                             <td><img src="http://2018.igem.org/wiki/images/4/46/T--DLUT_China_B--Card1.png"></td>
-                        </tr>
-                        <tr>
                             <td><img src="http://2018.igem.org/wiki/images/5/55/T--DLUT_China_B--Card2.png"></td>
                         </tr>
                         <tr>
                             <td><img src="http://2018.igem.org/wiki/images/0/0f/T--DLUT_China_B--Draft1.png"></td>
-                        </tr>
-                        <tr>
                             <td><img src="http://2018.igem.org/wiki/images/5/57/T--DLUT_China_B--Draft2.png"></td>
                         </tr>
                     </table>
@@ -240,11 +236,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
-
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
 
             </div>
@@ -255,10 +248,10 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/contents.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <!--<script src="js/contents.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
