--- a/HumanPractices.html
+++ b/HumanPractices.html
@@ -27,13 +27,10 @@
 </head>
 <body>
 <div id="dlutb">
-    <div id="moduleHeader" class="humanPractices">
+    <div id="moduleHeader">
         <div id="nav"></div>
-        <br>
+        <div id="background" class="humanPractices"></div>
         <div class="moduleTitle">Human Practices</div>
-        <div class="subModule">
-            <span>Human Practices</span>
-        </div>
     </div>
 
     <div id="mainBody">
@@ -53,30 +50,16 @@
                         by those aunts patiently. After we had a further communication with community residents by
                         interviewing them, we clearly felt that they had a deeper understanding of the dangers of CKD
                         and the importance of its early prevention,which means our practice is successful enough.</p>
-                    <div class="img">
-                        <!--<img src="img/HumanPractice/1.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/0/06/T--DLUT_China_B--HumanPractice1.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/HumanPractice/2.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/2/20/T--DLUT_China_B--HumanPractice2.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/HumanPractice/3.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/d/dc/T--DLUT_China_B--HumanPractice3.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/HumanPractice/4.png">-->
-                        <a href="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--HumanPractice4.png" target="_blank"><img src="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--HumanPractice4.png"></a>
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/HumanPractice/5.png">-->
-                        <a href="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--HumanPractice5.png" target="_blank"><img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--HumanPractice5.png"></a>
-                    </div>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/0/0c/T--DLUT_China_B--HumanPractice6.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/1/17/T--DLUT_China_B--HumanPractice7.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/3/38/T--DLUT_China_B--HumanPractice8.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/f/f1/T--DLUT_China_B--HumanPractice9.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
@@ -96,6 +79,12 @@
                         learned the importance and urgent needs of early detection in the treatment of chronic kidney
                         disease and the importance of improving the awareness of early treatment of patients, and more
                         deeply recognized the practicality and usefulness of our projects.</p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/9/9c/T--DLUT_China_B--HumanPractice10.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/d/d4/T--DLUT_China_B--HumanPractice11.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
@@ -107,6 +96,12 @@
                         product. And to help people understand the superiority of our products, we have designed a
                         product-based storyline, and we hope to attract more people who interest in our products in the
                         form of anthropomorphic storytelling and made our content of the project is impressive.</p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/c/c4/T--DLUT_China_B--HumanPractice12.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/3/31/T--DLUT_China_B--HumanPractice13.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -127,10 +122,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
 
             </div>
