--- a/Collaborations.html
+++ b/Collaborations.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Collaborations</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <link rel="stylesheet" href="css/fontawesome.css">
-    <link rel="stylesheet" href="css/contents.css">
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <!--<link rel="stylesheet" href="css/contents.css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -29,51 +29,45 @@
 <div id="dlutb">
     <div id="moduleHeader">
         <div id="nav"></div>
-        <br>
-        <div class="moduleTitle">Team</div>
-        <div class="subModule">
-            <span>Collaborations</span>
-        </div>
+        <!--todo 背景图片-->
+        <div class="moduleTitle">Collaborations</div>
     </div>
 
     <div id="mainBody">
         <div id="contents"></div>
         <div id="article">
             <div>
-                <h2 class="title">Collaboration with Peking University</h2>
+                <h2 class="title">Peking University</h2>
                 <div class="mainText">
                     <p>Time: 7.14</p>
                     <p>Location: School Of Life Sciences, Peking University</p>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/1.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--Collaboration1.jpg">
-                    </div>
-                    <p>As a senior igem team, Peking University has provided many reliable and effective suggestions for
+                    <p>As a senior iGEM team, Peking University has provided many reliable and effective suggestions for
                         our projects. After the introduction of the team project, we started brainstorming on the
                         project together, the most prominent of which is the proposal for high-throughput application of
                         the test method of the project, and the proposal of team cooperation.</p>
                     <p>Through this interflow, we have enriched our ideas on this project, and we are also moved by the
                         enthusiasm of Peking University students. This is our first collaboration, which provides a lot
                         of different ideas for our project.</p>
+                    <table class="img">
+                        <tr>
+                            <td colspan="3"><img src="http://2018.igem.org/wiki/images/d/df/T--DLUT_China_B--Collaboration1.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/1/1f/T--DLUT_China_B--Collaboration13.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/b/b4/T--DLUT_China_B--Collaboration14.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/6/69/T--DLUT_China_B--Collaboration15.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
             <div>
-                <h2 class="title">Collaboration with Northeastern University</h2>
+                <h2 class="title">Northeastern University</h2>
                 <div class="mainText">
                     <p>Time: 27 Aug, 2018</p>
                     <p>Location: The Meeting Room of Northeastern University Life Science Building</p>
                     <p>Participant: Four iGEM teams from Northeastern University and Dalian University of Technology</p>
                     <p>Content:</p>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/2.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/e/e4/T--DLUT_China_B--Collaboration2.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/3.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/4/4e/T--DLUT_China_B--Collaboration3.jpg">
-                    </div>
                     <p>The meeting began with the introduction of their project by the iGEM-A team of Northeastern
                         University. Team A's research project is engineering probiotics, and they expect to study
                         methods to alleviate inflammatory bowel disease (IBD) and prevent colorectal cancer (CRC) that
@@ -93,15 +87,6 @@
                         addition, team B students considered co-expression of Nanobodies with an enzyme to catalyze the
                         immobilization of Nanobodies with the addition of an aldehyde group at the end of the
                         Nanobody.</p>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/4.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/b/b6/T--DLUT_China_B--Collaboration4.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/5.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/2/27/T--DLUT_China_B--Collaboration5.jpg">
-                    </div>
                     <p>After the introduction of the team project, the students of the two schools raised questions and
                         discussed the contents of some projects. The students of the A team of Northeastern University
                         also took the opportunity to introduce some of the excellent genetic pathway design schemes of
@@ -112,33 +97,40 @@
                     <p>Tag: The exchange meeting ended in a relaxed and pleasant atmosphere. We look forward to the
                         exchanges and cooperation between the Dalian University of Technology and the iGEM team of
                         Northeastern University.</p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/e/ea/T--DLUT_China_B--Collaboration11.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/6/6f/T--DLUT_China_B--Collaboration12.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/2/27/T--DLUT_China_B--Collaboration5.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/4/4e/T--DLUT_China_B--Collaboration3.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
             <div>
                 <h2 class="title">CCIC in Shanghai</h2>
                 <div class="mainText">
-                    <div class="img">
-                        <!--<img src="img/Collaboration/6.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/f/fd/T--DLUT_China_B--Collaboration6.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/7.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/a/aa/T--DLUT_China_B--Collaboration7.jpg">
-                    </div>
                     <p>The CCIC exchange meeting was held at Shanghai University of Science and Technology. Two teams
                         from our school went to the conference. The team participated in the trouble shooting process,
                         shared some problems in the project with other teams, and got suggestions and help from other
                         teams. In the poster session, we showed posters to everyone and showed our posters to interested
                         students. In the exchange, we also gained a lot of suggestions and inspired. In the final
                         representation. We showed the type of testing together with the students of the Tsinghua A team,
-                        and received a review from Dr. Zhang Haoqian, a senior iGEMER.</p>
+                        and received a review from Dr. Zhang Haoqian, a senior iGEMer.</p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/a/aa/T--DLUT_China_B--Collaboration7.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/f/f5/T--DLUT_China_B--Collaboration10.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
             <div>
-                <h2 class="title">Cooperation with Ocean University of China</h2>
+                <h2 class="title">Ocean University of China</h2>
                 <div class="mainText">
                     <p>At the 5th CCiC meeting, we were very interested in the science and engineering brochure
                         “SPACESHIP E.coli” designed by OUC-China. After the meeting, we contacted the OUC-China team,
@@ -147,15 +139,16 @@
                         promotional activities in Dalian, including posting comic posters "SPACESHIP E.coli" and iGEM
                         posters in various high schools in Dalian, and in 2018 10 , the results will be fed back to
                         OUC-China before the 3rd of the month.</p>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/8.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/6/66/T--DLUT_China_B--Collaboration8.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Collaboration/9.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/f/f7/T--DLUT_China_B--Collaboration9.jpg">
-                    </div>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--Education6.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Education8.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/a/a6/T--DLUT_China_B--Education5.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -176,10 +169,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
 
             </div>
@@ -190,10 +181,10 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <script src="js/contents.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <!--<script src="js/contents.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
