--- a/Design.html
+++ b/Design.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hardware</title>
+    <title>Design</title>
     <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
@@ -16,7 +16,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
     <!--<script src="js/jquery.js"></script>-->
@@ -31,8 +31,8 @@
 <div id="dlutb">
     <div id="moduleHeader">
         <div id="nav"></div>
-        <div id="background" class="awards"></div>
-        <div class="moduleTitle">Hardware</div>
+        <div id="background" class="design"></div>
+        <div class="moduleTitle">Design</div>
     </div>
 
     <div id="article">
@@ -71,7 +71,7 @@
     <!--<script src="js/script.js"></script>-->
     <!--<script src="js/contents.js"></script>-->
     <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
