--- a/PublicEngagement.html
+++ b/PublicEngagement.html
@@ -27,13 +27,10 @@
 </head>
 <body>
 <div id="dlutb">
-    <div id="moduleHeader" class="humanPractices">
+    <div id="moduleHeader">
         <div id="nav"></div>
-        <br>
-        <div class="moduleTitle">Human Practices</div>
-        <div class="subModule">
-            <span>Public Engagement</span>
-        </div>
+        <div id="background" class="humanPractices"></div>
+        <div class="moduleTitle">Public Engagement</div>
     </div>
 
     <div id="mainBody">
@@ -52,25 +49,15 @@
                         mainly designed for people of different ages to understand their physical condition and for
                         understanding the market demand of our product. The results showed that a lot of people are
                         interested in our program which made the team members more motivated.</p>
-                    <div class="img">
-                        <!--<img src="img/Education/1.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Education1.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Education/2.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/3/36/T--DLUT_China_B--Education2.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Education/3.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/9/98/T--DLUT_China_B--Education3.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <!--<img src="img/Education/4.jpg">-->
-                        <img src="http://2018.igem.org/wiki/images/9/95/T--DLUT_China_B--Education4.jpg">
-                    </div>
+                    <table class="img">
+                        <tr>
+                            <td colspan="2"><img src="http://2018.igem.org/wiki/images/7/70/T--DLUT_China_B--Education12.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/1/1c/T--DLUT_China_B--Education13.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/1/1f/T--DLUT_China_B--Education14.jpg"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
 
@@ -98,32 +85,26 @@
                     <p>We hoped that our iGEM publicity trip would arouse the students’ interest in synthetic biology
                         and contribute to the development of the iGEM competition in China.</p>
                     <div class="img">
-                        <!--<img src="img/Education/5.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/a/a6/T--DLUT_China_B--Education5.jpg">
                     </div>
                     <br>
                     <div class="img">
-                        <!--<img src="img/Education/6.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--Education6.jpg">
                     </div>
                     <br>
                     <div class="img">
-                        <!--<img src="img/Education/7.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/7/7e/T--DLUT_China_B--Education7.jpg">
                     </div>
                     <br>
                     <div class="img">
-                        <!--<img src="img/Education/8.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Education8.jpg">
                     </div>
                     <br>
                     <div class="img">
-                        <!--<img src="img/Education/9.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg">
                     </div>
                     <br>
                     <div class="img">
-                        <!--<img src="img/Education/10.jpg">-->
                         <img src="http://2018.igem.org/wiki/images/2/2f/T--DLUT_China_B--Education10.jpg">
                     </div>
                 </div>
@@ -146,10 +127,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
 
             </div>
