--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2018 iGEM_DLUT_B</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/bubbles.css">
-    <link rel="stylesheet" href="css/fontawesome.css">
+    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <!--<link rel="stylesheet" href="css/bubbles.css">-->
+    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
 
-    <!--<script src="js/jquery.js"></script>-->
-    <script src="js/bubbles.js"></script>
+    <script src="js/jquery.js"></script>
+    <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>
 
     <script>
         function check() {
@@ -38,12 +38,13 @@
 <body onload="check()">
 <div id="dlutb">
     <div id="header">
+        <div id="team">DLUT_China_B</div>
         <div id="nav"></div>
         <div id="box">
-            <!--<img src="img/Top1.png">-->
             <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Top1.png">
-            <div id="word">
-                <p>Hello! I’m a lovely Kidney baby , an essential organ in your body. Can you see those sparkling items pointed by my hand? All right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea , right?</p>
+            <div>
+                <h2>Dr. Familict</h2>
+                <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
             </div>
         </div>
         <!--<div id="box">-->
@@ -95,7 +96,7 @@
                 </a>
             </div>
             <div class="td">
-                <a href="http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/Model">
                     <!--<img src="img/Circle3.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--Circle3.png" width="250">
                     <div>Model</div>
@@ -114,7 +115,7 @@
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Human_Practices">
                     <!--<img src="img/Circle5.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
-                    <div>Human Practices</div>
+                    <div id="humanPracticesCircle"><p>Human<br>Practices</p></div>
                 </a>
             </div>
             <div class="td">
@@ -160,8 +161,8 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <script src="js/script.js"></script>
-    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
     <script>
         /*对话气泡*/
         let conversation = {
@@ -465,7 +466,7 @@
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Parts";
         };
         goModel = function () {
-            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization";
+            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Model";
         };
         goAwards = function () {
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Applied_Design";
